# validate_cpf

./: README.md  mkdocs.yml  pyproject.toml
docs/: index.md
src/controller/: index.py
src/views/: index.py
tests/: __init__.py  test_valid_cpf.py
