[tool.poetry]
name = "validate-cpf"
version = "0.1.0"
description = "CPF Validator with"
authors = ["Miller Tumaz <miller.tumaz@hotmail.com>"]
readme = "README.md"
packages = [{include = "validate_cpf"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
