[tool.poetry]
name = "validate-cpf"
version = "0.1.0"
description = "CPF Validator with"
authors = ["Miller Tumaz <miller.tumaz@hotmail.com>"]
readme = "README.md"
packages = [{include = "validate_cpf"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
blue = "^0.9.1"
isort = "^5.11.4"
mkdocs = "^1.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
